--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="account">Account</string>
+    <string name="password">Password</string>
+    <string name="login_button">LOG IN</string>
+    <string name="signup_button">SIGN UP</string>
 </resources>
