--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="password">Password</string>
     <string name="login_button">LOG IN</string>
     <string name="signup_button">SIGN UP</string>
+    <string name="title_activity_department_list">Departments</string>
 </resources>
