--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,11 @@
         <item>2015 Spring</item>
 
     </string-array>
+    <string-array name="schools_array">
+        <item>ECE</item>
+        <item>SCS</item>
+        <item>BME</item>
+    </string-array>
 
 
 </resources>
